<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_multianchor</name>
  <version>2.0.0</version>
  <description>
    Universal UWB MultiAnchor positioning sensor package for ROS 2.
    Provides reusable URDF sensor macro for UWB-based indoor localization.
    Compatible with any robot platform and Gazebo Harmonic.
  </description>
  
  <maintainer email="jiu-bae@example.com">jiu-bae</maintainer>
  <license>Apache-2.0</license>
  
  <author email="noh@example.com">Noh</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS 2 dependencies (no robot-specific packages) -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Gazebo dependencies -->
  <depend>ros_gz_sim</depend>
  
  <!-- URDF processing -->
  <exec_depend>xacro</exec_depend>
  
  <!-- Optional: Only needed if using with Navigation2 -->
  <exec_depend>nav2_amcl</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
